[tool.poetry]
name = "bbtext"
version = "0.1.0"
description = ""
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"pdfminer.six" = "^20211012"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
